# VisualDemo

./: CMakeLists.txt  Demo1.cpp  datasource.cpp  datasource.h  gl_chart.cpp
include/: Widget.cpp  Widget.h  widget.ui
